# gitostat

./: .mailmap  .travis.yml  Cargo.toml  LICENSE  README.md
src/: files.rs  heatmap.rs  mailmap.rs  main.rs  personal.rs  snapshot.rs  test.rs
